# projeto-ETL-python-duckdb

./: README.md  main.python  pyproject.toml
